# allow

./: .gitignore  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  MACRO_INVOCATION_CHAIN.md  README.md  README_crates_io.md
allow/: Cargo.toml  build.rs
allow/src/: auxiliary.rs  clippy.rs  lib.rs  rustc.rs  rustdoc.rs  wrapper_macros.rs
allow/tests/internal_checks/incorrect_lint/: Cargo.toml
allow/tests/internal_checks/incorrect_lint/src/: lib.rs
allow_internal/: COPYRIGHT  Cargo.toml  README.md  build.rs  rustfmt.toml
allow_internal/src/: auxiliary.rs  lib.rs  proc_builder.rs
allow_prefixed/: Cargo.toml  README.md  build.rs
allow_prefixed/src/: auxiliary.rs  lib.rs  proc_builder.rs  wrapper_macros.rs
allow_tests/: Cargo.toml
allow_tests/src/: lib.rs
allow_tests/tests/internal_checks/: main.rs
allow_tests/tests/internal_checks/incorrect_lint/: Cargo.toml
allow_tests/tests/internal_checks/incorrect_lint/src/: lib.rs  wrapper_macros.rs
allows/: Cargo.toml  build.rs
allows/src/: lib.rs  wrapper_macros.rs
allows/tests/internal_checks/: main.rs
allows/tests/internal_checks/incorrect_lint/src/: lib.rs
allows_internals/: Cargo.toml
allows_internals/src/: lib.rs  test.rs
allows_tests/: Cargo.toml
allows_tests/src/: lib.rs
src/: lib.rs
tests/: simple.rs
