[package]
name = "allow"

# Did you also update version in
# - ../allow_prefixed
# - ../allow_tests
# - ../allow_tests/tests/internal_checks/incorrect_lint - TODO confirm
# - [dependencies] > allow_prefixed below?
version = "0.1.5"

edition = "2018"
rust-version = "1.45" # See explanation in `allow` crate's Cargo.toml

build = "build.rs"

description = "Alias/label lints (to disable) with your intentions. Reexported from allow_prefixed, grouped under rustc::, clippy:: and rustdoc:: modules."

# Same across allow, allow_preferred and allow_internal:
authors = ["Peter Kehl <peter.kehl@gmail.com>"]
# TODO development-tools?
categories = ["development-tools", "rust-patterns"]
keywords = ["lint", "lints", "linting"]
documentation = "https://docs.rs/allow"
license = "MIT OR Apache-2.0"
repository = "https://github.com/coop-rs/allow"
homepage = "https://github.com/coop-rs/allow"
readme = "../README.md"

[dependencies]
rustversion = "1.0"
# A wildcard star * for the patch number could work. But prefer exactness (to simplify
# troubleshooting). (That is, once we are at `1.*.*` or higher.)
allow_prefixed = { path = "../allow_prefixed", version = "0.1.5" }

[build-dependencies]
rustversion = "1.0"

# FEATURES:
#
# disable_nightly_lints, panic_old_on_floating_toolchain and quiet_old_on_floating_toolchain are
# passed to `allow_preferred` as-is, regardless of the Rust version or whether your default/selected
# toolchain is a floating one (stable/beta/nightly).