[package]
name = "allow"

# Did you also update version in
# - ../allow_prefixed
# - ../allow_tests
# - ../allow_tests/tests/internal_checks/incorrect_lint - TODO confirm
# - [dependencies] > allow_prefixed below?
version = "0.2.0"

edition = "2018"
rust-version = "1.45" # See explanation in `allow` crate's Cargo.toml

build = "build.rs"

description = "Alias/label lints (to disable) with your intentions. Re-exported from allow_prefixed, grouped under rustc::, clippy:: and rustdoc:: modules. Standard (rustc) lints are also re-exported at the crate's root."

# Same across allow, allow_preferred and allow_internal:
authors = ["Peter Kehl <peter.kehl@gmail.com>"]
categories = ["development-tools", "rust-patterns"]
keywords = ["alias", "lint", "linting", "lints", "semantic"]
documentation = "https://docs.rs/allow"
license = "MIT OR Apache-2.0"
repository = "https://github.com/coop-rs/allow"
homepage = "https://github.com/coop-rs/allow"
readme = "../README_crates_io.md"

[features]
# See `nightly` feature of [`allow_prefixed`].
nightly = ["allow_prefixed/nightly"]
no_nightly = ["allow_prefixed/no_nightly"]
silent_past_dummies = ["allow_prefixed/silent_past_dummies"]
scream_past_dummies = ["allow_prefixed/scream_past_dummies"]
# TODO consider
# fixed_toolchains_conservative = ["allow_prefixed/fixed_toolchains_conservative"]

[dependencies]
rustversion = "1.0"
# A wildcard star * for the patch number could work. But prefer exactness (to simplify
# troubleshooting). (That is, once we are at `1.*.*` or higher.)
allow_prefixed = { path = "../allow_prefixed", version = "0.2.0"}

[build-dependencies]
rustversion = "1.0"

# FEATURES:
#
# disable_nightly_lints, panic_old_on_floating_toolchain and quiet_old_on_floating_toolchain are
# passed to `allow_preferred` as-is, regardless of the Rust version or whether your default/selected
# toolchain is a floating one (stable/beta/nightly).
