[package]
name = "allow_internal"
version = "0.1.0"
edition = "2018"
rust-version = "1.45" # See explanation in `allow` crate's Cargo.toml
authors = ["Peter Kehl <peter.kehl@gmail.com>"]
# TODO development-tools?
categories = ["development-tools", "rust-patterns"]
keywords = ["lint", "lints", "linting"]
description = "Internal proc macros, for 'allow' crate only"
documentation = "https://docs.rs/allow_internal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/coop-rs/allow"
homepage = "https://github.com/coop-rs/allow"
readme = "../README.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# TODO?
# [package.metadata.docs.rs]
# targets = ["x86_64-unknown-linux-gnu"]