[package]
name = "allow_prefixed"

# Did you also update version in
# - ../allow
# - ../allow_tests
# - ../allow_tests/tests/internal_checks/incorrect_lint - TODO confirm
version = "0.1.5"

edition = "2018"
# Because of https://github.com/dtolnay/rustversion we can't support before 1.31. However, to use
# `::allow_internal::path_to_str_literal!($lint_path)` we also need proc macros in expression
# positions: https://github.com/rust-lang/rust/pull/68717. Hence, we require 1.45+.
#
# See also ../README.md.
rust-version = "1.45"

build = "build.rs"

description = "Implementation of 'allow' crate, exported with no prefix (for prefixless lints), and with clippy_ and rustoc_ prefixes."

# Same across allow, allow_preferred and allow_internal:
authors = ["Peter Kehl <peter.kehl@gmail.com>"]
# TODO development-tools?
categories = ["development-tools", "rust-patterns"]
# aliasing OR aliasable
keywords = ["alias", "lint", "linting", "lints", "semantic"]
documentation = "https://docs.rs/allow_prefixed"
license = "MIT OR Apache-2.0"
repository = "https://github.com/coop-rs/allow"
homepage = "https://github.com/coop-rs/allow"
readme = "../README.md"

[lib]
proc-macro = true
# @TODO check if any unit tests:
test = true     # we have unit tests
doctest = false # but no doc tests

[dependencies]
rustversion = "1.0"
allow_internal = { path = "../allow_internal", version = "0.1.1" }

[build-dependencies]
rustversion = "1.0"
cargo-toolchain = "0.1.0"
