[package]
name = "allow_tests"
version = "0.1.1"
edition = "2021" # because of 1.63
rust-version = "1.63" # because of https://github.com/oli-obk/ui_test

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allow = { path = "../allow", version = "0.1.*" }

[dev-dependencies]
ui_test = "0.8.*"
# colored = "2"

[[test]]
name = "internal_checks"
harness = false
