[package]
name = "incorrect_lint"

# @TODO revisit, then update here and in Cargo.toml of `allow_prefixed` and `allow`:
#
# Let's keep this the same as versions of `allow_internal` (see [dependencies] below).
#
# OR:
#
# Let's keep this the same as versions of `allow_prefixed` and `allow`.
version = "0.1.5"

edition = "2021"

[dependencies]
allow_internal = { path = "../../../../allow_internal", version = "0.1.1" }